--- a/cliente-informacion.html
+++ b/cliente-informacion.html
@@ -3,37 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Información del Usuario – CFE</title>
+  <title>Información General – CFE</title>
   <link rel="stylesheet" href="css/styles.css" />
-
   <style>
-    .info-general{
-      display:flex;flex-wrap:wrap;gap:30px;justify-content:center;
-      padding:40px;position:relative;z-index:2
-    }
-    .panel{
-      background:rgba(45,45,45,.95);color:#fff;padding:30px;border-radius:20px;
-      width:380px;min-height:280px;font-family:Arial,Helvetica,sans-serif;
-      box-shadow:0 0 15px rgba(255,255,255,.2)
-    }
-    .panel h2{
-      margin:0 0 20px;border-bottom:1px solid #ccc;padding-bottom:10px;
-      color:#00cc66
-    }
+    .info-general{display:flex;flex-wrap:wrap;gap:30px;justify-content:center;
+      padding:40px;z-index:2;position:relative}
+    .panel{background:rgba(45,45,45,.95);color:#fff;padding:30px;border-radius:20px;
+      width:380px;min-height:280px;box-shadow:0 0 15px rgba(255,255,255,.2);
+      font-family:Arial,Helvetica,sans-serif}
+    .panel h2{margin:0 0 20px;border-bottom:1px solid #ccc;padding-bottom:10px;
+      color:#00cc66}
     .panel p{margin:8px 0}
-    .boton-regresar{
-      position:absolute;top:85px;right:30px;z-index:3
-    }
-    .boton-regresar a{
+    .btn-back{position:absolute;top:85px;right:30px;z-index:3;
       background:#2d2d2d;color:#fff;padding:10px 20px;border-radius:30px;
       text-decoration:none;font-weight:bold;transition:.3s;
-      box-shadow:0 4px 10px rgba(255,255,255,.2)
-    }
-    .boton-regresar a:hover{background:#1a1a1a}
+      box-shadow:0 4px 10px rgba(255,255,255,.2)}
+    .btn-back:hover{background:#1a1a1a}
   </style>
 </head>
 
 <body class="registro-cliente">
+  <!-- Fondo animado -->
   <div id="particles-js"></div>
 
   <!-- Encabezado -->
@@ -42,13 +32,11 @@
   </header>
 
   <!-- Botón regresar -->
-  <div class="boton-regresar">
-    <a href="cliente-inicio.html">⬅️ Regresar a Inicio</a>
-  </div>
+  <a href="cliente-inicio.html" class="btn-back">⬅️ Regresar a Inicio</a>
 
-  <!-- Paneles de información -->
+  <!-- Paneles -->
   <div class="info-general">
-    <!-- Datos del usuario -->
+    <!-- Usuario -->
     <div class="panel">
       <h2>Información del Usuario</h2>
       <p><strong>Nombre:</strong>            <span id="nombre">—</span></p>
@@ -56,18 +44,21 @@
       <p><strong>CURP:</strong>              <span id="curp">—</span></p>
       <p><strong>Teléfono:</strong>          <span id="telefono">—</span></p>
       <p><strong>Correo:</strong>            <span id="correo">—</span></p>
-      <p><strong>Fecha de nacimiento:</strong> <span id="fecha-nacimiento">—</span></p>
+      <p><strong>Fecha de nacimiento:</strong> <span id="fecha">—</span></p>
+      <hr/>
+      <p><strong>No. Contrato:</strong>      <span id="numContrato">—</span></p>
+      <p><strong>No. Medidor:</strong>       <span id="numMedidor">—</span></p>
     </div>
 
     <!-- Dirección -->
     <div class="panel">
       <h2>Domicilio Registrado</h2>
-      <p><strong>Calle:</strong>    <span id="calle">—</span></p>
-      <p><strong>Número:</strong>   <span id="numero">—</span></p>
-      <p><strong>Colonia:</strong>  <span id="colonia">—</span></p>
-      <p><strong>Municipio:</strong><span id="municipio">—</span></p>
-      <p><strong>CP:</strong>       <span id="codigo_postal">—</span></p>
-      <p><strong>Estado:</strong>   <span id="estado">—</span></p>
+      <p><strong>Calle:</strong>       <span id="calle">—</span></p>
+      <p><strong>Número:</strong>      <span id="num">—</span></p>
+      <p><strong>Colonia:</strong>     <span id="colonia">—</span></p>
+      <p><strong>Municipio:</strong>   <span id="municipio">—</span></p>
+      <p><strong>CP:</strong>          <span id="cp">—</span></p>
+      <p><strong>Estado:</strong>      <span id="estado">—</span></p>
     </div>
   </div>
 
@@ -84,47 +75,37 @@
     });
   </script>
 
-  <!-- Script para poblar datos -->
+  <!-- Lógica para poblar datos -->
   <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const usuario = JSON.parse(localStorage.getItem("usuario"));
-    if (!usuario) {
-      alert("No hay datos del usuario. Por favor, inicia sesión nuevamente.");
-      window.location.href = "index.html";
-      return;
-    }
+    document.addEventListener("DOMContentLoaded",()=>{
+      const u = JSON.parse(localStorage.getItem("usuario"));
+      if(!u){ location.href="index.html"; return; }
 
-    /* Helper rápido */
-    const o = (id,val)=>document.getElementById(id).textContent = val ?? "—";
+      /* Helper */
+      const o = (id,val)=> document.getElementById(id).textContent = val ?? "—";
 
-    /* Datos personales */
-    o("nombre",   usuario.nombre);
-    o("apellidos",usuario.apellidos);
-    o("curp",     usuario.curp);
-    o("telefono", usuario.telefono);
-    o("correo",   usuario.correo);
+      /* Datos personales */
+      o("nombre",u.nombre);
+      o("apellidos",u.apellidos);
+      o("curp",u.curp);
+      o("telefono",u.telefono);
+      o("correo",u.correo);
+      o("fecha", u.fecha_nacimiento ?
+        new Date(u.fecha_nacimiento).toLocaleDateString() : "—");
 
-    /* Formatear fecha a dd/mm/aaaa */
-    if (usuario.fecha_nacimiento) {
-      const f = new Date(usuario.fecha_nacimiento);
-      o("fecha-nacimiento", f.toLocaleDateString('es-MX',{
-        day:'2-digit',month:'2-digit',year:'numeric'
-      }));
-    }
+      /* Contrato y medidor */
+      o("numContrato",  u.num_contrato  ?? u.numero_contrato ?? "—");
+      o("numMedidor",   u.medidor ?? "—");
 
-    /* Dirección (si existe) */
-    o("calle",          usuario.calle);
-    o("numero",         usuario.numero);
-    o("colonia",        usuario.colonia);
-    o("municipio",      usuario.municipio);
-    o("codigo_postal",  usuario.codigo_postal);
-    o("estado",         usuario.estado);
-  });
 
-  function cerrarSesion(){
-    localStorage.removeItem("usuario");
-    window.location.href="index.html";
-  }
+      /* Dirección */
+      o("calle",     u.calle);
+      o("num",       u.numero);
+      o("colonia",   u.colonia);
+      o("municipio", u.municipio);
+      o("cp",        u.codigo_postal);
+      o("estado",    u.estado);
+    });
   </script>
 </body>
 </html>
